--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="app">
-        <h1>Simple Quiz</h>
+        <h1>Simple Quiz</h1>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
             <div id="answer-buttons">
@@ -15,6 +15,7 @@
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
+            <div id="next-btn">Next</div>
         </div>
     </div>
 </body>
