--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
             <div id="next-btn">Next</div>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./index.css"></script>
 </body>
 </html>
