--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Quiz App</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="app">
@@ -15,9 +15,9 @@
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
             </div>
-            <div id="next-btn">Next</div>
+            <button id="next-btn">Next</button>
         </div>
     </div>
-    <script src="./index.css"></script>
+    <script src="script.js"></script>
 </body>
 </html>
